--- a/PASSWORD.html
+++ b/PASSWORD.html
@@ -69,7 +69,7 @@
 		function checkPassword() {
 		var password = document.getElementById("password").value;
 		if (password == "JOEXONTOP") {
-			window.location.href = "New%20Text%20Document%20(3).html";
+			window.location.href = "PROJECTS.html";
 		} else {
 			document.getElementById("message").innerHTML = "Password incorrect!";
 		}
